--- a/package.json
+++ b/package.json
@@ -18,5 +18,8 @@
         "concurrently": "^6.2.1",
         "cross-env": "^7.0.3",
         "nodemon": "^2.0.12"
+    },
+    "dependencies": {
+        "react-bodymovin": "^2.0.0"
     }
 }
