--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,7 @@
 /front-end/node_modules
 /AUTH_server/node_modules
 /QUUPPA_server/node_modules
+/POST_server/node_modules
 
 # testing
 /coverage
@@ -17,6 +18,7 @@
 /front-end/build
 /AUTH_server/build
 /QUUPPA_server/build
+/POST_server/build
 
 # misc
 .DS_Store
