--- a/package.json
+++ b/package.json
@@ -6,18 +6,19 @@
     "scripts": {
         "front-end:dev": "npm run --prefix front-end dev",
         "AUTH_server:dev": "npm run --prefix AUTH_server dev",
-        "start": "cross-env NODE_ENV=development concurrently --kill-others \"npm run front-end:dev\" \"npm run AUTH_server:dev\"",
+        "POST_server:dev": "npm run --prefix POST_server dev",
+        "start": "concurrently \"npm run front-end:dev\" \"npm run AUTH_server:dev\" \"npm run POST_server:dev\"",
         "front-end:install": "npm run --prefix front-end install",
         "AUTH_server:install": "npm run --prefix AUTH_server install",
-        "install": "concurrently \"npm run front-end:install\" \"npm run AUTH_server:install\""
+        "POST_server:install": "npm run --prefix POST_server install",
+        "install": "concurrently \"npm run front-end:install\" \"npm run AUTH_server:install\" \"npm run POST_server:install\""
     },
     "keywords": [],
     "author": "",
     "license": "ISC",
     "devDependencies": {
         "concurrently": "^6.2.1",
-        "cross-env": "^7.0.3",
-        "nodemon": "^2.0.12"
+        "cross-env": "^7.0.3"
     },
     "dependencies": {
         "react-bodymovin": "^2.0.0"
